# kinopoisk_dev

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  field.py  kinopoisk_dev.py  main.py  models.py  pyproject.toml  request.py  type.py
example/: example_image.py  example_movie.py  example_movie_awards.py  example_movie_id.py  example_movie_possible_values_by_field.py  example_movie_random.py  example_movies.py  example_person.py  example_person_awards.py  example_person_id.py  example_possible_values_by_field.py  example_random.py  example_review.py  example_season.py  get_info_movie.py  get_info_movies.py
kinopoisk_dev/: __init__.py  exception.py  field.py  kinopoisk_dev.py  model.py  request.py  untils.py  urls.py
kinopoisk_dev/abc/: __init__.py  request_abc.py
kinopoisk_dev/fields/: __init__.py  image_field.py  movie_awards_field.py  movie_field.py  person_awards_field.py  person_field.py  poss_val_field.py  review_field.py  season_field.py
kinopoisk_dev/models/: __init__.py  movie.py  person.py  season.py
kinopoisk_dev/params/: __init__.py  base_params.py  image_params.py  movie_awards_params.py  movie_params.py  person_awards_params.py  person_params.py  review_params.py  season_params.py
models/: movie.py  page.py  person.py
