[tool.poetry]
name = "kinopoisk-dev"
version = "0.1.0"
description = "Реализация Api для сервиса kinopoisk.dev"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
repository = 'https://github.com/odi1n/kinopoisk_dev'
documentation = "https://github.com/odi1n/kinopoisk_dev/blob/master/README.md"
keywords = ['kinopoisk', 'kinopoisk api', 'kinopoisk dev', 'kinopoisk dev api', 'api', 'dev']
packages = [{ include = "kinopoisk_dev" }]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pydantic = "^1.10.2"
grequests = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
